feat: refactor controllers